# internet-speed

./: Cargo.toml
src/: main.rs
src/core/: errors.rs  traits.rs
src/services/: download_tester.rs  mod.rs  speed_service.rs  upload_tester.rs
src/utils/: http_client.rs
