[package]
name = "internet-speed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
clap = { version = "4.5.51", features = ["derive"] } # optional CLI
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = [
    "stream",
    "json",
    "gzip",
    "brotli",
    "deflate",
    "trust-dns",
] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
